gap collection page fixed

--- a/src/sass/collections.scss
+++ b/src/sass/collections.scss
@@ -25,6 +25,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         justify-content: center;
+        gap: 15px;
 
         .collections-product{
             display: flex;
